Implementadas las traducciones y el modulo que las hace

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -6,5 +6,9 @@
     "RECOVERPASSWORD": "¿Did you forget your password?",
     "LOGIN": "Log in",
     "SIGNUP": "Sign Up"
+  },
+  "LANGUAGE": {
+    "SPANISH": "Spanish",
+    "ENGLISH": "English"
   }
 }
