Implementacion de las stores y muestreo de datos

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -16,5 +16,6 @@
       "APPCONFIG": "Configuracion de la app",
       "BACKBUTTON": "Volver atras"
     }
-  }
+  },
+  "EMAIL": "Correo electronico"
 }
