Implementadas mas llamadas al backend y muestreo de datos

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -17,5 +17,9 @@
       "BACKBUTTON": "Return"
     }
   },
-  "EMAIL": "Email"
+  "EMAIL": "Email",
+  "SERVER": {
+    "NOSELECTEDSERVER": "No Server Selected",
+    "NEWCHANNEL": "New Channel"
+  }
 }
