--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -24,5 +24,8 @@
   "SERVER": {
     "NOSELECTEDSERVER": "No Server Selected",
     "NEWCHANNEL": "New Channel"
+  },
+  "HOME": {
+    "SALUTE": "Welcome to DISCLONE"
   }
 }
