--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -22,11 +22,14 @@
   },
   "EMAIL": "Correo electronico",
   "SERVER": {
-    "NOSELECTEDSERVER": "Seleccione Servidor",
-    "NEWCHANNEL": "Nuevo Canal"
+    "NOSELECTEDSERVER": "Sin servidor Seleccionado",
+    "NEWCHANNEL": "Nuevo Canal",
+    "ADDSERVER": "Crear Servidor"
   },
   "HOME": {
     "SALUTE": "¡Bienvenido a Disclone!",
-    "WELCOMEMSG": "A tu izquierda podras ver un menu donde crear y usar servidores, para empezar a explorar presiona alguno de ellos!"
+    "WELCOMEMSG": "A tu izquierda podras ver un menu donde crear y usar servidores, para empezar a explorar presiona alguno de ellos!",
+    "NITRO": "¿Que es DISCLONE Nitro?",
+    "NITROMSG": "Disclone Nitro es un servicio de pago que proporciona una mejor experiencia de usuario"
   }
 }
