--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -32,5 +32,9 @@
     "SALUTE": "Welcome to DISCLONE",
     "NITRO": "¿What is DISCLONE nitro?",
     "NITROMSG": "Disclone Nitro is a payed service that grants users better features and experiences"
+  },
+  "CHANNEL": {
+    "CHANNELNAME": "Channel Name",
+    "ADDCHANNEL": "Create channel"
   }
 }
