Added Member List

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -26,7 +26,8 @@
     "NEWCHANNEL": "New Channel",
     "ADDSERVER": "New Server",
     "SERVERNAME": "Server name",
-    "PLACEHOLDER": "SAMPLE SERVER NAME"
+    "PLACEHOLDER": "SAMPLE SERVER NAME",
+    "MEMBERLIST": "Member List"
   },
   "HOME": {
     "SALUTE": "Welcome to DISCLONE",
