--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -37,5 +37,8 @@
   "CHANNEL": {
     "CHANNELNAME": "Channel Name",
     "ADDCHANNEL": "Create channel"
+  },
+  "SEARCH": {
+    "PLACEHOLDER": "Search..."
   }
 }
