--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -38,5 +38,8 @@
   "CHANNEL": {
     "CHANNELNAME": "Nombre del canal",
     "ADDCHANNEL": "Crear canal"
+  },
+  "SEARCH": {
+    "PLACEHOLDER": "Buscar..."
   }
 }
