--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -26,7 +26,8 @@
     "NEWCHANNEL": "New Channel",
     "ADDSERVER": "New Server",
     "SERVERNAME": "Server name",
-    "PLACEHOLDER": "SAMPLE SERVER NAME"
+    "PLACEHOLDER": "SAMPLE SERVER NAME",
+    "INVITATIONTITLE": "You have been invited to join a server!"
   },
   "HOME": {
     "SALUTE": "Welcome to DISCLONE",
@@ -36,5 +37,6 @@
   "CHANNEL": {
     "CHANNELNAME": "Channel Name",
     "ADDCHANNEL": "Create channel"
-  }
+  },
+  "ACCEPT": "Accept"
 }
