--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -46,5 +46,6 @@
   "SEARCH": {
     "PLACEHOLDER": "Buscar..."
   },
-  "CANCEL": "Cancelar"
+  "CANCEL": "Cancelar",
+  "LOGOUT": "Cerrar sesion"
 }
