--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -30,7 +30,8 @@
     "INVITATIONTITLE": "You have been invited to join a server!",
     "MEMBERLIST": "Member List",
     "DELETESERVER": "Delete the server",
-    "INVITATION": "Copy invitation link"
+    "INVITATION": "Copy invitation link",
+    "DELETESERVERTITLE": "Do you want to delete this server?"
   },
   "HOME": {
     "SALUTE": "Welcome to DISCLONE",
